--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "dget",
+  "name": "deepget",
   "version": "0.0.1",
-  "description": " Small package to get deep nested properties from JavaScript objects",
-  "main": "dist/dget.js",
-  "browser": "dist/dget.umd.js",
-  "module": "dist/dget.m.js",
+  "description": "Small package to get deep nested properties from JavaScript objects",
+  "main": "dist/deepget.js",
+  "browser": "dist/deepget.umd.js",
+  "module": "dist/deepget.m.js",
   "scripts": {
     "test": "echo \"No tests written yet\" && exit 0",
     "start": "microbundle watch",
-    "build": "microbundle --entry ./src/deepget.js --name='dget'"
+    "build": "microbundle --entry ./src/deepget.js --name='deepget'"
   },
   "repository": {
     "type": "git",
