--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "browser": "dist/dpgt.umd.js",
   "module": "dist/dpgt.m.js",
   "scripts": {
-    "test": "echo \"No tests written yet\" && exit 0",
+    "test": "ava ./test/deepget.spec.js --verbose",
+    "prebuild": "npm test",
     "start": "microbundle watch",
     "build": "microbundle --entry ./src/deepget.js --name='deepget'"
   },
@@ -31,6 +32,21 @@
   },
   "homepage": "https://github.com/jeremenichelli/deepget#readme",
   "devDependencies": {
+    "ava": "^0.25.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "babel-register": "^6.26.0",
     "microbundle": "^0.4.4"
+  },
+  "ava": {
+    "require": [
+      "babel-register"
+    ]
+  },
+  "babel": {
+    "presets": [
+      "es2015",
+      "stage-2"
+    ]
   }
 }
